Hide nav buttons till initial alignment, avoid FOBUC: Flash of Butt Ugly Content: Avoid at all costs!

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -650,7 +650,7 @@ body.home h1.loading {
 
 body.home nav {
   position: absolute;
-  top: 70%;
+  top: 150%;
   left: 250px;
   margin-top: -70px;
   overflow: hidden;
